--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,18 +4,18 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
 
-    <servlet>
-        <servlet-name>finder</servlet-name>
-        <servlet-class>com.example.findperson.FinderServlet</servlet-class>
-        <init-param>
-            <param-name>contacts</param-name>
-            <param-value>1.xlsx，2.xlsx</param-value>
-        </init-param>
-    </servlet>
+<!--    <servlet>-->
+<!--        <servlet-name>finder</servlet-name>-->
+<!--        <servlet-class>com.example.findperson.FinderServlet</servlet-class>-->
+<!--        <init-param>-->
+<!--            <param-name>contacts</param-name>-->
+<!--            <param-value>1.xlsx，2.xlsx</param-value>-->
+<!--        </init-param>-->
+<!--    </servlet>-->
 
-    <servlet-mapping>
-        <servlet-name>finder</servlet-name>
-        <url-pattern>/find</url-pattern>
-    </servlet-mapping>
+<!--    <servlet-mapping>-->
+<!--        <servlet-name>finder</servlet-name>-->
+<!--        <url-pattern>/find</url-pattern>-->
+<!--    </servlet-mapping>-->
 
 </web-app>
